[gd_scene load_steps=2 format=3 uid="uid://c3orxpr6ll0jc"]

[ext_resource type="Script" path="res://Scenes/battle_controller/battle_controller.gd" id="1_r7nbl"]

[node name="battleController" type="Node2D"]
script = ExtResource("1_r7nbl")
demo_scene = true

[node name="_2piece" type="HBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="_2piece"]
layout_mode = 2

[node name="SubViewport1" type="SubViewport" parent="_2piece/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(960, 1080)
render_target_update_mode = 0

[node name="SubViewportContainer2" type="SubViewportContainer" parent="_2piece"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="_2piece/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(960, 1080)
render_target_update_mode = 0

[node name="_1v1" type="HBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="_3piece" type="HBoxContainer" parent="."]
visible = false
offset_right = 1924.0
offset_bottom = 1080.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="_3piece"]
layout_mode = 2

[node name="SubViewport1" type="SubViewport" parent="_3piece/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(640, 1080)
render_target_update_mode = 0

[node name="SubViewportContainer2" type="SubViewportContainer" parent="_3piece"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="_3piece/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(640, 1080)
render_target_update_mode = 0

[node name="SubViewportContainer3" type="SubViewportContainer" parent="_3piece"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="_3piece/SubViewportContainer3"]
handle_input_locally = false
size = Vector2i(640, 1080)
render_target_update_mode = 0

[node name="EndTurn" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 540)
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="EndTurn"]
layout_mode = 2

[node name="Top Spacer" type="Control" parent="EndTurn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="EndTurn/VBoxContainer"]
layout_mode = 2
text = "End Turn"

[node name="TurnTimerLabel" type="Label" parent="EndTurn/VBoxContainer"]
layout_mode = 2
text = "(100 secs)"

[node name="TurnTimer" type="Timer" parent="EndTurn/VBoxContainer"]

[node name="Bottom Spacer" type="Control" parent="EndTurn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="EndTurn/VBoxContainer/Button" to="." method="_on_button_pressed"]
